--- a/PatientRecordsModule/Views/PersonRecordsHeader.xaml
+++ b/PatientRecordsModule/Views/PersonRecordsHeader.xaml
@@ -93,10 +93,28 @@
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Edit48x48.png" Command="{Binding ShowInEditModeCommand}" IsEnabled="{Binding IsViewModeActive}"/>
         <fluent:Button Header="Сохранить"
                        SizeDefinition="Large"
-                       LargeIcon="pack://application:,,,/PatientInfoModule;Component/Resources/Images/SaveChanges-48x48.png" Command="{Binding SaveProtocolCommand}" IsEnabled="{Binding IsEditModeActive}"/>
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/SaveChanges-48x48.png" Command="{Binding SaveProtocolCommand}" IsEnabled="{Binding IsEditModeActive}"/>
         <fluent:Button Header="Закрыть"
                        SizeDefinition="Large"
-                       LargeIcon="pack://application:,,,/PatientInfoModule;Component/Resources/Images/Cancel-48x48.png" Command="{Binding ShowInViewModeCommand}"  IsEnabled="{Binding IsEditModeActive}"/>
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Cancel-48x48.png" Command="{Binding ShowInViewModeCommand}"  IsEnabled="{Binding IsEditModeActive}"/>
     </fluent:RibbonGroupBox>
 
+    <fluent:RibbonGroupBox Header="Документы" FontWeight="Medium" Visibility="{Binding AllowDocuments, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+        <fluent:Button x:Name="btnAttachDocument" Command="{Binding AttachDocumentCommand}" 
+                       Header="Прикрепить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AttachDocument48x48.png" />
+        <fluent:Button x:Name="btnDetachDocument" Command="{Binding DetachDocumentCommand}"
+                       Header="Удалить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/DetachDocument48x48.png" />
+    </fluent:RibbonGroupBox>
+    
+    <fluent:RibbonGroupBox Header="DICOM" FontWeight="Medium" Visibility="{Binding AllowDICOM, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+        <fluent:Button x:Name="btnAttachDICOM" Command="{Binding AttachDICOMCommand}" 
+                       Visibility="{Binding CanAttachDICOM, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                       Header="Прикрепить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AttachFile48x48.png" />
+        <fluent:Button x:Name="btnDetachDICOM" Command="{Binding DetachDICOMCommand}"
+                       Visibility="{Binding CanDetachDICOM, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                       Header="Открепить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/DetachFile48x48.png" />
+        <!--<fluent:Button x:Name="btnMarkDICOM" Command="{Binding MarkDICOMCommand}" 
+                       Header="Отметить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Mark48x48.png" />-->
+    </fluent:RibbonGroupBox>
+    
 </fluent:RibbonTabItem>
